fix bug on contact page that made it too wide (#17)

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -326,7 +326,7 @@ table {
 .social-icon {
   height: 65px;
   width: 65px;
-  margin: 24px; }
+  margin: 12px; }
 
 #social-list {
   display: flex;
