--- a/src/styles/scss/Contact.scss
+++ b/src/styles/scss/Contact.scss
@@ -37,7 +37,7 @@
 .social-icon {
     height: 65px;
     width: 65px;
-    margin: 24px;
+    margin: 12px;
 }
 
 #social-list {
